<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">VStackSample</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting...</string>
    <string name="chat_1_1">Chat 1-1</string>
    <string name="call">Call</string>
    <string name="call_out">CallOut</string>
    <string name="chat_history">Chat history</string>
    <string name="create_group">Create group</string>
    <string name="create_group_fragment">Create group fragment</string>
    <string name="start_chat_group_fragment">Start chat group fragment</string>
    <string name="select_user_for_chat">Select friend user for chat</string>
    <string name="video_call">Video call</string>
    <string name="no_connection">No connection</string>
    <string name="input_another_chat">Or input another friend</string>
    <string name="input_friend_id">Input friend\'s id</string>
    <string name="input_phone_number">Input phone number</string>
    <string name="hint_input_user_id">Input User ID</string>
    <string name="hint_input_user_name">Input User Name (Optional)</string>
    <string name="next">Next</string>
    <string name="your_friend">Your Friend:</string>

    <array name="list_friend_name">
        <item>VStack 1</item>
        <item>VStack 2</item>
        <item>VStack 3</item>
        <item>VStack 4</item>
        <item>VStack 5</item>
        <item>VStack 6</item>
    </array>

</resources>